# octo-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  pythonpackage.yml
icf_client/: __init__.py  client.py  models.py
octo_client/: __init__.py  client.py  const.py  dacite_patch.py  exceptions.py  models.py  utils.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_models.py  test_utils.py
tests/responses/: availability_opening_hours.json  availability_start_times.json  calendar_opening_hours.json  calendar_start_times.json  product.json  products.json  reservation.json  supplier.json  suppliers.json
