[tool.poetry]
name = "octo-api-client"
version = "1.1.2"
description = "HTTP client for OCTo (Open Connection for Tourism) APIs."
authors = ["Tiqets <connections@tiqets.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "octo_client"}]

[tool.poetry.dependencies]
python = "^3.7"
tonalite = ">=1.7.1,<2"
requests = ">=2.20.0,<3"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.256"
mypy = "1.0.1"
pytest = "7.2.2"
responses = "0.23.1"
tox = "4.4.7"
black = "23.1.0"
types-requests = "^2.28.11.15"

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 100
fix = true
exclude = [
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".env",
    "venv",
    ".venv",
]

[tool.black]
line-length = 100

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    envlist =
        py37
        py38
        py39
        py310
        py311

    [testenv]
    whitelist_externals = poetry
    commands_pre = poetry install
    commands = poetry run pytest
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
