[tox]
envlist = py37,py38

[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[isort]
skip=
    .tox
    .env
    .venv
    venv
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = True
force_sort_within_sections = true
forced_separate = icf_client

[flake8]
exclude =
    .git
    .tox
    .env
    .venv
    venv
max-line-length = 120

[mypy]
python_version = 3.7
ignore_missing_imports = True
cache_dir=/dev/null
show_error_context=False
